2025-02-12  Mike FABIAN  <mfabian@redhat.com>

	* Version 1.8.5 released.
	* Makefile.am: Enable anthy-unicode, thanks to Takao Fujiwara <tfujiwar@redhat.com>
	* mimx-anthy.c: Use UTF-8 instead of EUC-JP

2023-08-23  Mike FABIAN  <mfabian@redhat.com>

	* Version 1.8.4 released.

2023-07-25  Mike FABIAN  <mfabian@redhat.com>

	* Version 1.8.3 released.

2023-05-09  Mike FABIAN  <mfabian@redhat.com>

	* Version 1.8.2 released.

2023-05-05  Mike FABIAN  <mfabian@redhat.com>

	Version 1.8.1 released.

2020-03-08  handa  <handa@gnu.org>

	* mimx-ispell.c: Fix typo.

2018-02-08  K. Handa  <handa@gnu.org>

	Version 1.8.0 released.

2016-01-12  K. Handa  <handa@gnu.org>

	* Makefile.am (INCLUDES): Delete it.  Make this value included in
	AM_CPPFLAGS.

2014-12-10  K. Handa  <handa@gnu.org>

	* Version 1.7.0 released.

2014-11-11  K. Handa  <handa@gnu.org>

	* .gitignore: Converted from .cvsigore.

	* .cvsignore: Delete it.

2013-06-28  Kenichi Handa  <handa@gnu.org>

	* mconv.c (main): Fix checking of command line arguments.

2012-12-15  Kenichi Handa  <handa@gnu.org>

	* mdump.c (help_exit): Fix typo.

2012-09-18  Kenichi Handa  <handa@m17n.org>

	* Version 1.6.4 released.

2011-10-11  Kenichi Handa  <handa@m17n.org>

	* Version 1.6.3 released.

2010-10-05  Kenichi Handa  <handa@m17n.org>

	* Version 1.6.2 released.

2010-10-05  Kenichi Handa  <handa@m17n.org>

	* Makefile.am (INCLUDES): Set -I$(top_srcdir)/src.

2010-04-23  Kenichi Handa  <handa@m17n.org>

	* Version 1.6.1 released.

2010-04-23  Kenichi Handa  <handa@m17n.org>

	* HELLO.utf8: Add Unicode 5.1 based Myanmar.

2010-03-30  Kenichi Handa  <handa@m17n.org>

	* Version 1.6.0 released.

2010-02-18  Kenichi Handa  <handa@m17n.org>

	* Makefile.am: Build modules dynamically loaded with
	-avoid-version and no -version-info.

2010-02-09  Kenichi Handa  <handa@m17n.org>

	* HELLO.utf8 (Greek, Hindi): Fixed.

2009-08-13  Kenichi Handa  <handa@m17n.org>

	* Version 1.5.5 released.
